--- a/_publications/ijerph-15-01032-v2.md
+++ b/_publications/ijerph-15-01032-v2.md
@@ -2,6 +2,7 @@
 title: "A Novel Hybrid Data-Driven Model for Daily Land Surface Temperature Forecasting Using Long Short-Term Memory Neural Network Based on Ensemble Empirical Mode Decomposition"
 collection: publications
 permalink: /publications/ijerph-15-01032-v2
+venue: "International Journal of Environmental Research and Public Health"
 date: 2018-05-16
 citation: '<b>Xike Zhang</b>, Qiuwen Zhang, Gui Zhang, Zhiping Nie, Zifan Gui and Huafei Que <i>International Journal of Environmental Research and Public Health</i> 2018, 15, 1032'
 ---
