--- a/_publications/FEB_18_00628.md
+++ b/_publications/FEB_18_00628.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publications/FEB_18_00628
 venue: "Fresenius Environmental Bulletin"
 date: 2018-05-16
-citation: 'Xike Zhang</strong>, Qiuwen Zhang*, Gui Zhang Zifan Gui and Zhiping Nie. <i>Fresenius Environmental Bulletin</i> 2018, 27(9), 6168-6178
+citation: '<b>Xike Zhang</b>, Qiuwen Zhang, Gui Zhang Zifan Gui and Zhiping Nie. <i>Fresenius Environmental Bulletin</i> 2018, 27(9), 6168-6178
 ---
 [[PDF]](https://www.mdpi.com/1660-4601/15/5/1032/pdf)
 
