--- a/_publications/FEB_18_00628.md
+++ b/_publications/FEB_18_00628.md
@@ -3,10 +3,12 @@ title: "Surface Water Are Variations Monitoring and Flood Hazards Using Landsat 
 collection: publications
 permalink: /publications/FEB_18_00628
 venue: "Fresenius Environmental Bulletin"
-date: 2018-05-16
-citation: '<b>Xike Zhang</b>, Qiuwen Zhang, Gui Zhang Zifan Gui and Zhiping Nie. <i>Fresenius Environmental Bulletin</i> 2018, 27(9), 6168-6178
+excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
+date: 2010-10-01
+paperurl: http://academicpages.github.io/files/paper2.pdf
+citation: '<b>Xike Zhang</b>, Qiuwen Zhang, Gui Zhang Zifan Gui and Zhiping Nie. <i>Fresenius Environmental Bulletin</i> 2018, 27(9), 6168-6178'
 ---
-[[PDF]](https://www.mdpi.com/1660-4601/15/5/1032/pdf)
+[[PDF]](https://kokocheung.github.io/mysite/files/FEB_18_00628.pdf)
 
 ## Abstract
 Dongting Lake is the second largest freshwater lake in China, with rapid seasonal surface water area fluctuations in the middle reach of the Yangtze River and downstream from the Three Gorges Reservoir (TGR). The marked variation of the lake’s surface water area is considered to have been affected by the TGR over the past decades. In this study, Landsat TM/ETM+/OLI time-series imagery data were em
