--- a/_publications/ijerph-15-01032-v2.md
+++ b/_publications/ijerph-15-01032-v2.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publications/ijerph-15-01032-v2
 venue: "International Journal of Environmental Research and Public Health"
 date: 2018-05-16
-citation: '<b>Xike Zhang</b>, Qiuwen Zhang, Gui Zhang, Zhiping Nie, Zifan Gui and Huafei Que <i>International Journal of Environmental Research and Public Health</i> 2018, 15, 1032'
+citation: '<b>Xike Zhang</b>, Qiuwen Zhang, Gui Zhang, Zhiping Nie, Zifan Gui and Huafei Que <i>International Journal of Environmental Research and Public Health</i>. 2018, 15, 1032.'
 ---
 [[PDF]](https://www.mdpi.com/1660-4601/15/5/1032/pdf)
 
