--- a/_publications/FBE_17_01242.md
+++ b/_publications/FBE_17_01242.md
@@ -7,7 +7,7 @@ excerpt: 'This paper is about the number 2. The number 3 is left for future work
 date: 2018-03-15
 citation: '<b>Xike Zhang</b>, Qiuwen Zhang, Gui Zhang Zifan Gui and Zhiping Nie. <i>Fresenius Environmental Bulletin</i>. 2018, 27(3), 1563-1573.'
 ---
-[[PDF]](http://kokocheung.github.io/mysite/files/FBE_17_01242.pdf)
+[[PDF]](<!--http://kokocheung.github.io/mysite/files/FBE_17_01242.pdf-->)
 
 ## Abstract
 Land cover in Dongting Lake region has been faced high variations during recent decades. Therefore, there has a strong need to investigate and under stand the land cover changes in Dongting Lake region between land cover types. In this study, support vector machine (SVM) classification method was employed to detect changes in land cover dynamic in Dongting Lake region using Landsat images for the
