--- a/_publications/FEB_18_00628.md
+++ b/_publications/FEB_18_00628.md
@@ -7,7 +7,7 @@ excerpt: 'This paper is about the number 2. The number 3 is left for future work
 date: 2010-10-01
 citation: '<b>Xike Zhang</b>, Qiuwen Zhang, Gui Zhang Zifan Gui and Zhiping Nie. <i>Fresenius Environmental Bulletin</i>. 2018, 27(9), 6168-6178.'
 ---
-[[PDF]](https://kokocheung.github.io/mysite/files/FEB_18_00628.pdf)
+[[PDF]](<!--https://kokocheung.github.io/mysite/files/FEB_18_00628.pdf-->)
 
 ## Abstract
 Dongting Lake is the second largest freshwater lake in China, with rapid seasonal surface water area fluctuations in the middle reach of the Yangtze River and downstream from the Three Gorges Reservoir (TGR). The marked variation of the lake’s surface water area is considered to have been affected by the TGR over the past decades. In this study, Landsat TM/ETM+/OLI time-series imagery data were em
